# c-storable-deriving

./: LICENSE  README  README.md  c-storable-deriving.cabal
Foreign/: CStorable.hs
Foreign/CStorable/: BaseInstances.hs  TypeClass.hs
