Name:                c-storable-deriving
Version:             0.1
Synopsis:            Generate C-like storable instances from datatypes
-- Description:
-- Homepage:
License:             BSD3
License-File:        LICENSE
Author:              Matthew Maurer
Maintainer:          maurer@ugcs.caltech.edu
Category:            Foreign
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  Exposed-Modules:
    Foreign.CStorable
  Build-Depends: base,
                 ghc-prim
  Extensions: FlexibleInstances,
              UndecidableInstances,
              ScopedTypeVariables,
              TypeOperators,
              DefaultSignatures,
              FlexibleContexts

Source-Repository HEAD
  Type:     git
  Location: git://github.com/maurer/c-storable-deriving.git
