Name:                c-storable-deriving
Version:             0.1
Synopsis:            Generate C-like storable instances from datatypes
Description:         Automatically generates struct-rule based Storable
                     instances based on the Generic typeclass.
Homepage:            https://github.com/maurer/c-storable-deriving
License:             BSD3
License-File:        LICENSE
Author:              Matthew Maurer
Maintainer:          maurer@matthewmaurer.org
Category:            Foreign
Build-Type:          Simple
Cabal-Version:       >=1.2

Library
  Exposed-Modules:
    Foreign.CStorable
  Other-Modules:
    Foreign.CStorable.TypeClass
    Foreign.CStorable.BaseInstances
  Build-Depends: base,
                 ghc-prim
  Extensions: FlexibleInstances,
              ScopedTypeVariables,
              TypeOperators,
              DefaultSignatures,
              FlexibleContexts,
              CPP

Source-Repository HEAD
  Type:     git
  Location: git://github.com/maurer/c-storable-deriving.git
